--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,14 @@
                         <a class="page-scroll nav-shadow" href="#about">partments.io</a>
                     </li>
 
+                    <li>
+                        <a class="page-scroll nav-shadow" href="#contact">צור קשר</a>
+                    </li>
 
                     <li>
                         <a class="page-scroll nav-shadow" href="#questions">שאלות נפוצות</a>
                     </li>
-                    <li>
-                        <a class="page-scroll nav-shadow" href="#contact">צור קשר</a>
-                    </li>
+
                     <li>
                         <a class="page-scroll nav-shadow" href="#whoareyou">אודות</a>
                     </li>
@@ -79,7 +80,7 @@
 
     <!-- Header -->
     <header>
-    <div class="bg-txt-blk">
+    <div class="bg-txt-blk" id="about">
         <div class="container">
             <div class="intro-text above">
                 <div class="intro-heading" >Partments</div>
@@ -94,6 +95,52 @@
     </div>
     </header>
 
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+    <h2 class="section-heading">אנא צור קשר על מנת לקבל מידע אודות הפרוייקטים</h2>
+                    <h3 class="section-subheading text-muted">או שתתקשר לבן - 0505607926 :)</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                          <div class="col-md-4">
+                          </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <!-- <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div> -->
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">שלח הודעה</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- About Section -->
     <section id="about">
@@ -215,58 +262,36 @@
         </div>
     </aside>
 
-    <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">  :שלב א׳</h2>
-                    <h2 class="section-heading">בוחרים חלק בנכס לרכישה</h2><br>
-                    <h2 class="section-heading">  :שלב ב׳</h2>
-                    <h2 class="section-heading">רוכשים את החלק - על שמך</h2><br>
-                    <h2 class="section-heading">  :שלב ג׳</h2>
-                    <h2 class="section-heading">מוכרים את הנכס ברווח</h2><br>
-                    <br />
-                    <h4 class="section-subheading text-muted">אנו בוחרים כל פרוייקט בקפידה לפי רזומה ואיתנות פיננסית של היזם.<br>
-                    אנו מביאים את הפרוייקטים המבטיחים ביותר בשוק הנדל"ן ומלווים אתכם עד למימוש הנכס.</h4>
-
-                    <br />
-                    <br />
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
-                    <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">ביטחון לאורך הדרך</h4>
-                    <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">הנגשת הנדל"ן</h4>
-                    <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <section id="questions">
       <div class="container">
         <div class="row">
+          <div class="row text-center">
+              <div class="col-md-4">
+                  <span class="fa-stack fa-4x">
+                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                      <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
+                  <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
+              </div>
+              <div class="col-md-4">
+                  <span class="fa-stack fa-4x">
+                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                      <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <h4 class="service-heading">ביטחון לאורך הדרך</h4>
+                  <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
+              </div>
+              <div class="col-md-4">
+                  <span class="fa-stack fa-4x">
+                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                      <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <h4 class="service-heading">הנגשת הנדל"ן</h4>
+                  <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
+              </div>
+          </div>
           <div class="col-lg-3">
           </div>
           <div class="col-lg-6 text-center">
@@ -299,102 +324,14 @@
 
             </div>
 
-                <section id="services">
-                    <div class="container">
-                        <!-- <div class="row">
-                            <div class="col-lg-12 text-center">
-                                <h2 class="section-heading">  :שלב א׳</h2>
-                                <h2 class="section-heading">בוחרים חלק בנכס לרכישה</h2><br>
-                                <h2 class="section-heading">  :שלב ב׳</h2>
-                                <h2 class="section-heading">רוכשים את החלק - על שמך</h2><br>
-                                <h2 class="section-heading">  :שלב ג׳</h2>
-                                <h2 class="section-heading">מוכרים את הנכס ברווח</h2><br>
-                                <br />
-                                <h4 class="section-subheading text-muted">אנו בוחרים כל פרוייקט בקפידה לפי רזומה ואיתנות פיננסית של היזם.<br>
-                                אנו מביאים את הפרוייקטים המבטיחים ביותר בשוק הנדל"ן ומלווים אתכם עד למימוש הנכס.</h4>
 
-                                <br />
-                                <br />
-                            </div>
-                        </div> -->
-                        <div class="row text-center">
-                            <div class="col-md-4">
-                                <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                                </span>
-                                <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
-                                <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
-                            </div>
-                            <div class="col-md-4">
-                                <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                                </span>
-                                <h4 class="service-heading">ביטחון לאורך הדרך</h4>
-                                <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
-                            </div>
-                            <div class="col-md-4">
-                                <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                    <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
-                                </span>
-                                <h4 class="service-heading">הנגשת הנדל"ן</h4>
-                                <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
           <div class="col-lg-3">
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-<h2 class="section-heading">אנא צור קשר על מנת לקבל מידע אודות הפרוייקטים</h2>
-                    <h3 class="section-subheading text-muted">או שתתקשר לבן - 0505607926 :)</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">שלח הודעה</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Who Are you? -->
     <section id="whoareyou">
@@ -498,6 +435,20 @@
                     </ul>
                 </div>
             </div>
+        </div>
+      </br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-10">
+              <p>
+                הפרסום לעיל איננו הצעה. הצעה למשקיעים ממדינת ישראל, תיעשה על בסיס פטור לפי חוק ניירות ערך, התשכ"ח – 1968 ("חוק ניירות ערך") וחוק השקעות משותפות בנאמנות, תשנ"ד- 1994 ("חוק השקעות משותפות") הקובע כי הצעה ומכירה לעד 35 משקיעים (כמפורט בסעיף 15א(א)(1) לחוק ניירות ערך ובתקנותיו) אשר אינם מנויים בתוספת הראשונה לחוק ניירות ערך אינה מחייבת פרסום תשקיף שרשות ניירות ערך אישרה את פרסומו. לאור האמור, השקעה באמצעות פלטפורמת פרטמנטס אינה מוסדרת לפי חוק ניירות ערך ו/או לפי הוראות חוק השקעות משותפות. הצעת ההשקעה, לכשתיעשה, וכל חומר פרסומי אודותיה לא אושרו על ידי רשות ניירות ערך בישראל. לתשומת ליבכם, פרטי ההשקעה המלאים ותנאיה ייחשפו אך ורק במסגרת הצעה עתידית שתיעשה בהליך של משא ומתן פרטני ("הליך המשא ומתן"). במסגרת הליך המשא ומתן, יחשפו רק 35 משקיעים כמפורט בסעיף 15א(א)(1) לחוק ניירות ערך ובתקנותיו לכלל המידע ביחס להשקעת הנדל"ן ולתנאי ההשקעה בישות המשפטית המשקיעה בנכס, ורק 35 משקיעים כאמור יוכלו לקחת חלק בהשקעה. בהתאם לכך, התנאים הסופיים של ההשקעה בישות המשפטית המשקיעה בנכס יקבעו מול 35 המשקיעים הסופיים (כמפורט בסעיף 15א(א)(1) לחוק ניירות ערך ובתקנותיו) באופן פרטני במסגרת של הליך משא ומתן אישי. פרטמנטס השקעות בע"מ וכן כל יישות אחרת מקבוצת פרטמנטס ו/או הפועלים מטעמן, אינם מורשים לפי חוק הסדרת העיסוק בייעוץ השקעות, בשיווק השקעות ובניהול תיקי השקעות, תשנ"ה-1995, וכל מידע פרסומי שנמסר וכן כל מידע שיימסר לגבי אפשרות השקעה במסגרת הצעה עתידית לא יהווה ייעוץ השקעות או שיווק השקעות כהגדרתם בחוק. בקבלת החלטת השקעה במסגרת הליך המשא ומתן, על המשקיעים לסמוך על בדיקה שהתבצעה על ידם בלבד אודות ההשקעה ותנאיה, לרבות יתרונות וסיכונים הכרוכים בהשקעה, ועליהם לפנות לקבלת ייעוץ מיועצים מתאימים בנוגע לסוגיות משפטיות, חשבונאיות, מיסוייות וכספיות של ביצוע ההשקעה.
+              </p>
+            </div>
+            <div class="col-md-1">
+            </div>
+          </div>
         </div>
     </footer>
 
